--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.21.4",
     "appwrite": "^16.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
